--- a/styles/blog-style.css
+++ b/styles/blog-style.css
@@ -1,5 +1,4 @@
 nav {
-  position: fixed; /* set the position to fixed */
   top: 0; /* align the nav bar to the top of the page */
   left: 0; /* align the nav bar to the left of the page */
   width: 100%; /* set the width to 100% */
@@ -8,7 +7,6 @@ nav {
   display: flex; /* set the display property to flex */
   justify-content: space-between; /* align the items with equal space between them */
   align-items: center; /* center the items vertically */
-  z-index: 9999;
 }
 
 nav ul {
@@ -84,7 +82,51 @@ p {
   text-align: left;
 }
 
+.blog-post code {
+  display: inline-block;
+  background-color: #f5f5f5;
+  color: #333;
+  font-family: 'Courier New', Courier, monospace;
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+   'opsz' 48;
+}
+
+.material-symbols-outlined a {
+  text-decoration: none;
+  color: #b2393e;
+}
+
+
+.material-symbols-outlined a:hover {
+  color: #fff;
+  background-color: #c8c6b1;
+  border-radius: 5px;
+  padding: 5px 10px;
+}
+
+code {
+  display: inline-block;
+  background-color: #f5f5f5;
+  color: #333;
+  font-family: 'Courier New', Courier, monospace;
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
 /* Colour scheme classes */
+
 .go-ben {
   background: #737955;
 }
@@ -105,95 +147,3 @@ p {
   background: #cf514a;
 }
 
-/* slide effect buttons */
-.slide-button1 {
-  background-color: #53242c;
-  border: none;
-  color: white;
-  padding: 10px 20px;
-  font-size: 18px;
-  position: relative;
-  overflow: hidden;
-  text-decoration: none;
-  z-index: 1;
-
-}
-
-.slide-button1::before {
-  content: "";
-  position: absolute;
-  top: -100%;
-  left: -10px;
-  width: calc(100% + 20px);
-  height: 100%;
-  background: #b2393e;
-  transition: all 0.2s ease-in-out;
-  z-index: -1;
-}
-
-.slide-button1:hover::before {
-  top: 0;
-}
-
-.slide-button2 {
-  background-color: #b2393e;
-  border: none;
-  color: white;
-  padding: 10px 20px;
-  font-size: 18px;
-  position: relative;
-  overflow: hidden;
-  text-decoration: none;
-  z-index: 1;
-
-}
-
-.slide-button2::before {
-  content: "";
-  position: absolute;
-  top: -100%;
-  left: -10px;
-  width: calc(100% + 20px);
-  height: 100%;
-  background: #53242c;
-  transition: all 0.2s ease-in-out;
-  z-index: -1;
-}
-
-.slide-button2:hover::before {
-  top: 0;
-}
-
-.slide-button3 {
-  background-color: #cf514a;
-  border: none;
-  color: white;
-  padding: 10px 20px;
-  font-size: 18px;
-  position: relative;
-  overflow: hidden;
-  text-decoration: none;
-  z-index: 1;
-
-}
-
-.slide-button3::before {
-  content: "";
-  position: absolute;
-  top: -100%;
-  left: -10px;
-  width: calc(100% + 20px);
-  height: 100%;
-  background: #53242c;
-  transition: all 0.2s ease-in-out;
-  z-index: -1;
-}
-
-.slide-button3:hover::before {
-  top: 0;
-}
-
-#git-logo {
-  max-width: 15px;
-  margin: -1px;
-}
