--- a/styles/style.css
+++ b/styles/style.css
@@ -68,7 +68,7 @@ body {
 }
 
 section {
-  position: relativ;
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
