--- a/styles/style.css
+++ b/styles/style.css
@@ -1,32 +1,32 @@
 nav {
-  position: fixed; /* set the position to fixed */
-  top: 0; /* align the nav bar to the top of the page */
-  left: 0; /* align the nav bar to the left of the page */
-  width: 100%; /* set the width to 100% */
-  background-color: #c8c6b1; /* set the background color */
-  color: #fff; /* set the text color */
-  display: flex; /* set the display property to flex */
-  justify-content: space-between; /* align the items with equal space between them */
-  align-items: center; /* center the items vertically */
-  z-index: 9999;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #c8c6b1;
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 9999; /* set nav bar to always be on top */
 }
 
 nav ul {
-  display: flex; /* set the display property of the ul element to flex */
-  flex-direction: row; /* set the flex direction to row */
-  list-style: none; /* remove the default bullet points from the list */
+  display: flex;
+  flex-direction: row;
+  list-style: none;
 }
 
 nav li {
-  margin: 0 10px; /* add some margin between the list items */
+  margin: 0 10px;
 }
 
 nav a {
-  display: block; /* set the display property of the anchor element to block */
-  padding: 10px; /* add some padding to the links */
-  color: #fff; /* set the text color */
-  text-decoration: none; /* remove the underline from the links */
-  font-size: 16px; /* set the font size */
+  display: block;
+  padding: 10px;
+  color: #fff;
+  text-decoration: none;
+  font-size: 16px;
   border: 2px solid transparent; /* add a transparent border */
   transition: all 0.2s ease-in-out; /* add a transition effect */
 }
@@ -42,24 +42,24 @@ nav a:focus {
 }
 
 /* Media queries for responsive design */
-
 @media only screen and (max-width: 600px) {
   nav {
-    flex-direction: column; /* change the flex direction to column */
-    align-items: flex-start; /* align the items to the left */
-    padding: 10px; /* add some padding */
+    flex-direction: column; 
+    align-items: flex-start;
+    padding: 10px;
   }
   
   nav li {
-    margin: 10px 0; /* add some margin */
+    margin: 10px 0;
   }
   
   nav a {
-    padding: 5px; /* reduce the padding */
-    font-size: 14px; /* reduce the font size */
+    padding: 5px;
+    font-size: 14px;
   }
 }
 
+/* main styles */
 body {
   margin: 0;
   font-family: 'Source Code Pro', sans-serif;
@@ -78,10 +78,6 @@ section {
 
 p {
   text-align: center;
-}
-
-.blog-post {
-  text-align: left;
 }
 
 /* Colour scheme classes */
@@ -193,6 +189,7 @@ p {
   top: 0;
 }
 
+/* github logo */
 #git-logo {
   max-width: 15px;
   margin: -1px;
