--- a/styles/blog-style.css
+++ b/styles/blog-style.css
@@ -94,6 +94,7 @@ p {
   -moz-osx-font-smoothing: grayscale;
 }
 
+/* tech blog button */
 .material-symbols-outlined {
   font-variation-settings:
   'FILL' 0,
@@ -113,6 +114,11 @@ p {
   background-color: #c8c6b1;
   border-radius: 5px;
   padding: 5px 10px;
+}
+
+/* core blog button */
+#material-symbols-outlined a {
+  color: #53242c;
 }
 
 code {
